# zed-test-coverage-highlight

./: .gitignore  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
editors/zed/: Cargo.toml  LICENSE  extension.toml
editors/zed/src/: lib.rs
server/: package.json  tsconfig.json
server/scripts/: compile.ts  dev-setup.ts
server/src/: config.ts  discovery.ts  model.ts  parse.ts  render.ts  server.ts  store.ts  uri.ts  vendor.d.ts
server/test/: config.test.ts  e2e.test.ts  fixtures.ts  model.test.ts  parse.test.ts  render.test.ts  store.test.ts  uri.test.ts
